# virtualenv: python -m venv --prompt venv .venv
# Instalar localmente con pip en modo editable: python -m pip install -e .
# Generar requiremets.py: python -m piptools compile -o requirements.txt pyproject.toml
# Generar dev-requiremets.py: python -m piptools compile --extra dev -o dev-requirements.txt pyproject.toml

[build-system]
requires = [
    "setuptools >= 69",
    "setuptools_scm[toml] >= 8",
    "wheel >= 0.42",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "jsontoxlsx/_version.py"
local_scheme = "no-local-version"
version_scheme = 'post-release'

[tool.setuptools]
packages = ["jsontoxlsx"]


[project]
name = "jsontoxlsx"
dynamic=["version"]
description = "Aplicación para convertir información relevante para movilidad desde JSON de GLH a un archivo xlsx"
requires-python = ">=3.11"
keywords = ["python", "mobility data", "urban mobility", "json data structure", "location tracking"]
authors = [
    {name = "Jorge Araya", email = "jaravar@cam.upv.es"}
]
license = {file = "LICENSE"}
urls = {source = "https://github.com/jarayavarela/datafusion"}

# Generar requiremens.txt con: python -m piptools compile -o requirements.txt pyproject.toml
dependencies = ["pillow==10.3.0"]

# Generar dev-requiremens.txt con: python -m piptools compile --extra dev -o dev-requirements.txt pyproject.toml
[project.optional-dependencies]
dev = ["pytest==8.2.2", "ruff==0.4.10", "mypy==1.10.0"]

[project.scripts]
jsontoxlsx = "jsontoxlsx.src.main:main"


[tool.curlylint.rules]
image_alt = true

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
unfixable      = ["F401", "F841"]
ignore         = ["E711", "E712", "N805", "D401","D300","D415","PLR0913"]
lint.select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # isort
  "I001",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.messages]
max-line-length = 120
disable         = ["R0903", "E0213", "E0401", "E0402","E0611","R0913","R0914","E1101","W0718","W0613","W0702","W0601","W0603"]
